Fix deprecations and compiler warnings.